# commoncents.com

./: .pre-commit-config.yml  README.md  manage.py  pyproject.toml
.github/workflows/: test.yml
common_cents/: asgi.py  settings.py  urls.py  wsgi.py
mortgage_calculator/: apps.py  tests.py  urls.py  utils.py  views.py
mortgage_calculator/templates/mortgage_calculator/: affordability.html  overpayment.html
webapp/: views.py
webapp/static/webapp/: style.css
webapp/templates/webapp/: base.html  index.html
