[project]
name = "common-cents"
version = "0.1.0"
description = "Common Cents - your financial compass"
authors = [
    {name = "Samuele Mattiuzzo",email = "samumatt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.6,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
